# iterative-gene-enrichment-app

./: .gitignore  README.md  README_Streamlit.md  pyproject.toml  requirements.txt  streamlit_app.py
code/: background_gene_set.py  cli.py  enrichment.py  gene_converter.py  gene_set.py  gene_set_library.py  iter_enrichment.py  library_validator.py  sandbox.py  streamlit_app.py  streamlit_app_test.py
code/ui/: dot_utils.py  helpers.py  processing.py  rendering.py  utils.py
data/backgrounds/: Afffymetrix U133 plus2.txt  alias.json  all_genes.txt  all_genes_from_c2_c5_msigdb_no_all.txt  all_genes_from_msigdb.txt
data/gene_lists/: HIV.InputGeneList.txt
data/libraries/: alias.json  c2.cp.kegg_legacy.v2025.1.Hs.symbols.gmt  c2.cp.kegg_medicus.v2025.1.Hs.symbols.gmt  c2.cp.pid.v2025.1.Hs.symbols.gmt  c2.cp.reactome.v2025.1.Hs.symbols.gmt  c2.cp.wikipathways.v2025.1.Hs.symbols.gmt  c5.go.cc.v2025.1.Hs.symbols.gmt  c5.go.mf.v2025.1.Hs.symbols.gmt  c5.hpo.v2025.1.Hs.symbols.gmt  h.all.v2025.1.Hs.symbols.gmt  stringdb_protein_interactions.gmt
test_cli_iterative_results2/example_gene_list_20250831_190048/: combined_network.dot  iterative_enrichment_snapshot.json
test_cli_results/example_gene_list_20250831_185901/: regular_enrichment_snapshot.json
