[project]
name = "cc-enrichment"
version = "0.0.1"
description = "Cellular component enrichment Streamlit app"
readme = "README.md"
requires-python = ">=3.12.4"
license = { text = "MIT" }
authors = [{ name = "Maxim Kuleshov", email = "kuleshov.max.v@gmail.com" }]

# Runtime dependencies (from requirements.txt minus pytest)
dependencies = [
    "pandas~=2.2.3",
    "scipy~=1.15.2",
    "statsmodels~=0.14.4",
    "plotly~=6.0.1",
    "pydot~=4.0.1",
    "networkx~=3.5",
    "streamlit~=1.48.0",
    "typer~=0.9.0",
    "Pillow~=11.1.0",
    "graphviz~=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest~=7.4.4",
    "isort~=6.0.1",
    "black~=25.1.0",
    "flake8~=7.3.0"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

#[project.scripts]
#cc-enrichment = "code.cli:main"
